# arzule-ingest

./: .gitignore  LICENSE  README.md  pyproject.toml
src/arzule_ingest/: __init__.py  audit.py  cli.py  config.py  endpoints.py  ids.py  logger.py  run.py  run_context.py  sanitize.py
src/arzule_ingest/agent_sdk/: __init__.py  client.py  hooks.py  normalize.py  session.py
src/arzule_ingest/autogen/: handoff.py  hooks.py  normalize.py  spanctx.py
src/arzule_ingest/autogen_v2/: __init__.py  hooks.py  install.py  telemetry.py
src/arzule_ingest/blobs/: __init__.py  base.py  http_blob.py  inline.py
src/arzule_ingest/claude/: __init__.py  hook.py  install.py  normalize.py  session.py  turn.py  wrapper.py
src/arzule_ingest/crewai/: __init__.py  handoff.py  hooks_llm.py  hooks_tool.py  implicit_handoff.py  install.py  listener.py  normalize.py  spanctx.py
src/arzule_ingest/demo/: __init__.py  crew_demo.py
src/arzule_ingest/langchain/: __init__.py  callback_handler.py  handoff.py  install.py  normalize.py  spanctx.py
src/arzule_ingest/langgraph/: __init__.py  callback_handler.py  install.py  normalize.py  spanctx.py
src/arzule_ingest/run_managers/: agent_context.py  span_manager.py
src/arzule_ingest/sinks/: __init__.py  base.py  file_jsonl.py  http_batch.py  multi.py
src/arzule_ingest/validators/: __init__.py  client.py  event_mapping.py  hooks.py  risk_gate.py  streaming.py  types.py
tests/: __init__.py  test_handoff_key_injection.py  test_sanitize.py  test_seq_monotonic.py
tests/agent_sdk/: __init__.py  conftest.py
