[project]
name = "arzule-ingest"
version = "0.1.0"
description = "Observability wrapper for CrewAI that emits TraceEvent JSONL with handoff edge derivation"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [{ name = "Arzule" }]
dependencies = [
    "crewai>=0.80.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/arzule_ingest"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

